[tool.poetry]
name = "async-grpc-examples"
version = "0.1.0"
description = "Contains async gRPC client and server examples"
authors = ["kaustuk <kaustukrathod@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pre-commit = "^2.13.0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
